--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
   <!-- Ícones Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+</script>
 
-<style>
  <style>
     :root {
       --azul: #0d6efd;
@@ -3043,5 +3043,6 @@ function sincronizarNomeProdutoAntigo(novoNome, nomeAntigo) {
 
 </body>
 </html>
+
 
 
